<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="z1828205.cs.niu.Assignment05.MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/addString"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="200"
        android:title="@string/deleteString"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_deleteall"
        android:icon="@android:drawable/ic_delete"
        android:orderInCategory="300"
        android:title="@string/deleteALL"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_update"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="400"
        android:title="@string/action_update"
        app:showAsAction="ifRoom" />
</menu>
